php-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: php-app
  namespace: default
  labels:
    app: php-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: "sorydiallo89/php-starter"
        ports:
          - containerPort: 3000
