nodejs-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: php-app
  namespace: default
spec:
  selector:
    app: php-app
  ports:
  - name: http
    targetPort: 3000
    port: 80
