traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ornikar.dev
    http:
      paths:
      - backend:
          service:
            name: php-app
            port:
              number: 80
        path: /world
        pathType: Prefix
  - host: ornikar.dev
    http:
      paths:
      - backend:
          service:
            name: nodejs-app
            port:
              number: 80
        path: /hello
        pathType: Prefix
